# Konkret-mainhosp

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  init.sql  package-lock.json  pyproject.toml  requirements.txt
app/alembic/: env.py
app/alembic/versions/: 32b5578c400a_add_password_column_to_user_table.py  5026b2173eab_requisitos_de_senha.py  6ad6bd43a542_requisitos_de_senha.py  927b5476f041_requisitos_de_senha.py  94513067b538_initial_migration.py  b1bcb381ed27_add_password_column_to_user_table.py
app/api/: __init__.py  dependencies.py  diary.py  main.py  utils.py
app/api/core/: __init__.py  models.py  schemas.py  session.py
app/api/repositories/: __init__.py  employee_repository.py  mao_de_obra_repository.py  proprietary_repository.py  user_repository.py  work_repository.py  workframe_repository.py
app/api/routers/: employee.py  proprietary.py  user.py  work.py
app/api/services/: __init__.py  employee_service.py  mao_de_obra_service.py  proprietary_service.py  user_service.py  work_service.py  workframe_service.py
backend/: __init__.py
backend/alembic/: env.py
backend/alembic/versions/: 1303e50d284b_initial_migration.py  2854b0e65daf_adicionando_a_coluna_cnpj_e_user_type.py  3df6880999c5_adicionando_a_coluna_cnpj_e_user_type.py  (+7 more)
backend/api/: dependencies.py  main.py  utils.py
env/: pyvenv.cfg
frontend/: netlify.toml  openapi.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/app/: index.tsx  new-user.tsx
frontend/src/: main.tsx  routeTree.gen.ts  styles.js
myenv/: pyvenv.cfg
(+51 files in other folders)
