[project]
name = "konkret-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "annotated-types>=0.7.0",
    "anyio>=4.6.2.post1",
    "bcrypt>=4.2.1",
    "click>=8.1.7",
    "fastapi>=0.115.5",
    "greenlet>=3.1.1",
    "h11>=0.14.0",
    "idna>=3.10",
    "mako>=1.3.6",
    "markupsafe>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pur>=7.3.2",
    "pydantic-core>=2.27.1",
    "pydantic>=2.10.1",
    "python-dotenv>=1.0.1",
    "sniffio>=1.3.1",
    "sqlalchemy>=2.0.36",
    "starlette>=0.41.3",
    "typing-extensions>=4.12.2",
    "uvicorn>=0.32.1",
    "geopy>=2.4.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "fpdf>=1.7.2",
    "fpdf2>=2.8.1",
    "biblioteca>=0.0.1a2",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.19",
]
